Horizonriver PRD21-Mar-2017/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AcctSeed__Accounting_Type__c</fullName>
        <label>Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>Taxable Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Exempt Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Products (Expense GL Account)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Products (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Products (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Inventory_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Products (Inventory GL Account)</relationshipLabel>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Inventory_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether the product is a managed inventory product</description>
        <inlineHelpText>Denotes whether the product is a managed inventory product</inlineHelpText>
        <label>Inventory Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Inventory_Type__c</fullName>
        <label>Inventory Type</label>
        <picklist>
            <picklistValues>
                <fullName>Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raw Material</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Non_Inventoried_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is no longer used</description>
        <inlineHelpText>This field is no longer used</inlineHelpText>
        <label>zDep-Non-Inventoried Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Revenue_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransCode__c</fullName>
        <label>TransCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Accounting_All_Products</fullName>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>AcctSeed__Unit_Cost__c</columns>
        <columns>AcctSeed__Revenue_GL_Account__c</columns>
        <columns>AcctSeed__Expense_GL_Account__c</columns>
        <columns>AcctSeed__Inventory_GL_Account__c</columns>
        <columns>AcctSeed__Inventory_Product__c</columns>
        <columns>AcctSeed__Inventory_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Accounting - All Products</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <validationRules>
        <fullName>AcctSeed__Require_Expense_GL_Account</fullName>
        <active>true</active>
        <description>Require a Expense GL Account if the Inventory Product field is true or the Inventory Type field is Purchased</description>
        <errorConditionFormula>(TEXT(AcctSeed__Inventory_Type__c) = &quot;Purchased&quot; || AcctSeed__Inventory_Product__c) &amp;&amp;  ISBLANK(AcctSeed__Expense_GL_Account__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Expense_GL_Account__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Require_Inventory_GL_Account</fullName>
        <active>true</active>
        <description>Require an Inventory GL Account if the Inventory Product field is true or the Inventory Type field is Purchased</description>
        <errorConditionFormula>(TEXT(AcctSeed__Inventory_Type__c) = &quot;Purchased&quot; || AcctSeed__Inventory_Product__c) &amp;&amp;  ISBLANK(AcctSeed__Inventory_GL_Account__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Inventory_GL_Account__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Require_Inventory_Type</fullName>
        <active>true</active>
        <description>Require an inventory Type if the Inventory Product field is true</description>
        <errorConditionFormula>AcctSeed__Inventory_Product__c &amp;&amp;  ISBLANK(TEXT(AcctSeed__Inventory_Type__c))</errorConditionFormula>
        <errorDisplayField>AcctSeed__Inventory_Type__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Require_Revenue_GL_Account</fullName>
        <active>true</active>
        <description>Require a Revenue GL Account if the Inventory Product field is true or the Inventory Type field is Purchased</description>
        <errorConditionFormula>(TEXT(AcctSeed__Inventory_Type__c) = &quot;Purchased&quot; || AcctSeed__Inventory_Product__c) &amp;&amp;  ISBLANK(AcctSeed__Revenue_GL_Account__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Revenue_GL_Account__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Require_Unit_Cost</fullName>
        <active>true</active>
        <description>Require Unit Cost if the Inventory Product field is true or the Inventory Type field is Purchased</description>
        <errorConditionFormula>(TEXT(AcctSeed__Inventory_Type__c) = &quot;Purchased&quot; || AcctSeed__Inventory_Product__c) &amp;&amp;  ISBLANK(AcctSeed__Unit_Cost__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Unit_Cost__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TransCode</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(TransCode__c)</errorConditionFormula>
        <errorDisplayField>TransCode__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>